@@ -11,9 +11,14 @@ import com.example.bff.persistence.repositories.ShoppingCartRepository;
 import com.example.bff.persistence.repositories.UserRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
+import java.util.List;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
@@ -27,8 +32,7 @@ public class RegisterNewShoppingCartOperationProcessor implements RegisterNewSho
     public RegisterNewShoppingCartResponse process(final RegisterNewShoppingCartRequest registerNewShoppingCartRequest) {
         log.info("Processing new shopping cart registration");
 
-        User user = userRepository.findById(registerNewShoppingCartRequest.getUserId())
-                .orElseThrow(UserNotFoundException::new);
+        User user = getAuthenticatedUser();
         log.info("User has successfully been found in the database with id = {}", user.getId());
 
         ShoppingCart shoppingCart = ShoppingCart.builder()
@@ -40,16 +44,36 @@ public class RegisterNewShoppingCartOperationProcessor implements RegisterNewSho
         ShoppingCart savedShoppingCart = shoppingCartRepository.save(shoppingCart);
         log.info("Shopping cart registered successfully with id = {}", savedShoppingCart.getId());
 
+        user.setShoppingCart(savedShoppingCart);
+        userRepository.save(user);
+        log.info("User successfully saved shopping cart!");
+
+        List<UUID> collect = savedShoppingCart.getItems().stream()
+                .map(CartItem::getId)
+                .toList();
+
         RegisterNewShoppingCartResponse build = RegisterNewShoppingCartResponse.builder()
-                .cartId(savedShoppingCart.getId())
-                .userId(savedShoppingCart.getUser().getId())
-                .items(savedShoppingCart.getItems().stream()
-                        .map(CartItem::getId)
-                        .collect(Collectors.toList()))
+                .cartId(String.valueOf(savedShoppingCart.getId()))
+                .userId(String.valueOf(savedShoppingCart.getUser().getId()))
+                .items(collect.stream()
+                        .map(UUID::toString)
+                        .toList())
                 .quantity(savedShoppingCart.getItems().size())
                 .build();
         log.info("New shopping cart registration process completed");
 
         return build;
+    }
+
+    private User getAuthenticatedUser() {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        String email = authentication.getName();
+        log.info("Authenticated user with email = {}", email);
+
+        return userRepository.findUserByEmail(email)
+                .orElseThrow(() -> {
+                    log.error("User with email '{}' not found", email);
+                    return new UsernameNotFoundException("The email you entered does not exist!");
+                });
     }
 }
